# gpgpu-fun

./: CMakeLists.txt  notes.txt  plan.txt
add/: CMakeLists.txt  add.cpp  add2.cpp
battleship/: CMakeLists.txt  build_and_run_cuda.sh  build_and_run_lazy.sh  precomputed_bitmask_unroll.cpp  precomputed_bitmask_unroll_custom.cpp  precomputed_bitmask_unroll_custom_gpu.cpp  precomputed_bitmask_unroll_custom_gpu_parallelized.cpp  precomputed_bitmask_unroll_custom_gpu_parallelized_mem_opt.cpp  precomputed_bitmask_unroll_gpu_parallelized_mem_opt.cpp
battleship/rewrite/: .algorithm.h.swp  .graph.h.swp  .main.cpp.swp  .standard_game.h.swp  a.out  algorithm.h  api_user.cpp  build_and_run.sh  build_and_run_cuda.sh  fast_bitset.h  graph.h  main.cpp  main_gpu.cpp  main_gpu_api.cpp  standard_game.h  tempoutput.txt
bruteforce_nbody/: CMakeLists.txt
